[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pseudo_rnascope"
authors = [{name = "Jan Patrick Pett", email = "jp30@sanger.ac.uk"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
requires-python = ">=3.0"

[project.urls]
Home = "https://github.com/JPatrickPett/pseudo_rnascope"
